<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">


            <ImageView
                android:layout_width="@dimen/logo_w_h"
                android:layout_height="@dimen/logo_w_h"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:src="@drawable/d" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardViewBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="2.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/login_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:textColor="@android:color/black"
                            android:textColorHint="@color/textHintColor" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/login_password"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginRight="@dimen/activity_horizontal_margin"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:textColor="@android:color/black"
                            android:textColorHint="@color/textHintColor" />
                    </android.support.design.widget.TextInputLayout>

                    <!-- Login Button -->

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="20dip"
                        android:background="@drawable/round"
                        android:text="@string/btn_login"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/btn_reset_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@string/btn_forgot_password"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black" />

                    <Button
                        android:id="@+id/btn_signup"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@string/btn_link_to_register"
                        android:textAllCaps="false"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ProgressBar
                        android:id="@+id/pb_loading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="invisible" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>