...
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your connection, email and password or sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Don\'t have an account? Sign up now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="lbl_forgot_password">Forgot password?</string>
...
    <string name="search_query">Search for medication</string>
    <string name="help_one"> Welcome to Med Manager, an application that helps users to keep record of their medications and also serves as a reminder to when the medication is to be taken and its duration.</string>
    <string name="help_two">To get medications by category,</string>
    <string name="help_three"> Click and hold the medication list to be able to view and sort medications by months.</string>
    <string name="search">Search</string>
    <string name="number_of_days">Number of days</string>
    <string name="click_for_date">click for Date</string>
    <string name="drug_description">Drug description</string>
    <string name="drug_name">Drug name</string>
</resources>

