<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorShadow"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/medication_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/drug_name"
                android:inputType="text"
                android:textColor="@color/colorWhite"
                android:textStyle="normal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/medication_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/drug_description"
                android:inputType="text"
                android:textColor="@color/colorWhite"
                android:textStyle="normal" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/number_of_doze"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Number of Doze"
                android:inputType="number"
                android:textColor="@color/colorWhite"
                android:textStyle="normal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/number_of_times_daily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Number of Times Daily"
                android:inputType="number"
                android:textColor="@color/colorWhite"
                android:textStyle="normal" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="Date Started"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/click_for_date"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_of_days"
                android:inputType="number"
                android:textColor="@color/colorWhite"
                android:textStyle="normal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/alarm_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Alarm"
                android:inputType="number"
                android:textColor="@color/colorWhite"
                android:textStyle="normal" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="add"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>